--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,61 @@
 alembic==0.9.1
+altgraph==0.12
 aniso8601==1.2.0
-appdirs==1.4.2
-click==6.7
+appdirs==1.4.0
+boto==2.45.0
+bz2file==0.98
+click==6.6
+cycler==0.10.0
+demjson==2.2.4
+Django==1.10.4
 dominate==2.3.1
 enum==0.4.6
 firebase-token-generator==2.0.1
-Flask==0.12
+Flask==0.11.1
 Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.0.3
 Flask-Moment==0.5.1
+Flask-RESTful==0.3.5
 flask-restplus==0.10.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-WTF==0.14.2
 functools32==3.2.3.post2
-gunicorn==19.6.0
-inflect==0.2.5
+gensim==0.13.4
+gunicorn==19.7.1
 itsdangerous==0.24
-Jinja2==2.9.5
+jieba==0.38
+Jinja2==2.8
 jsonschema==2.6.0
+macholib==1.7
 Mako==1.0.6
 MarkupSafe==0.23
+matplotlib==1.5.3
+mercurial==3.9.2
+modulegraph==0.12.1
+MySQL-python==1.2.3rc1
+numpy==1.12.0
 nutritionix==0.2
 packaging==16.8
-psycopg2==2.7
+PIL==1.1.7
+protobuf==3.0.0b2
+psycopg2==2.6.2
+py2app==0.10
+pygame==1.9.2b8
 pyparsing==2.1.10
-python-dateutil==2.6.0
+python-dateutil==2.5.3
 python-editor==1.0.3
 -e git://github.com/mikexstudios/python-firebase.git@fc0597aafb1cb83c76e039370b1e0e180322f0e0#egg=python_firebase
-pytz==2016.10
+pytz==2016.7
 requests==1.2.3
+scipy==0.18.1
+simplejson==3.10.0
 six==1.10.0
-sqlacodegen==1.1.6
+smart-open==1.3.5
 SQLAlchemy==1.1.6
-sqlautocode==0.7
+tensorflow==0.8.0
+vboxapi==1.0
+virtualenv==15.0.3
 visitor==0.1.3
-Werkzeug==0.11.15
+Werkzeug==0.11.11
 WTForms==2.1
